[package]
name = "unisat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.14.3"
ckb-auth-rs = { git="https://github.com/nervosnetwork/ckb-auth", default-features = false, features = ["ckb2023", "dynamic-library-memory-600"] }
log = { version = "0.4.17", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"]}
